fix: wrap all components in their own class

--- a/src/presentation/components/header/headerStyles.scss
+++ b/src/presentation/components/header/headerStyles.scss
@@ -1,6 +1,6 @@
 @import "../../styles/colors.scss";
 
-header {
+.header {
   display: flex;
   justify-content: center;
   background-color: $primary;
