--- a/src/presentation/pages/surveys/components/emptySurveyItem/emptySurveyItemStyles.scss
+++ b/src/presentation/pages/surveys/components/emptySurveyItem/emptySurveyItemStyles.scss
@@ -1,6 +1,6 @@
 @import "../../../../styles/colors.scss";
 
-li {
+.emptySurveyItem {
   position: relative;
   display: flex;
   flex-direction: column;
