--- a/src/presentation/pages/surveys/components/surveyItem/surveyItemStyles.scss
+++ b/src/presentation/pages/surveys/components/surveyItem/surveyItemStyles.scss
@@ -1,6 +1,6 @@
 @import "../../../../styles/colors.scss";
 
-li {
+.surveyItem {
   position: relative;
   display: flex;
   flex-direction: column;
