--- a/src/presentation/pages/surveys/components/surveyList/surveyListStyles.scss
+++ b/src/presentation/pages/surveys/components/surveyList/surveyListStyles.scss
@@ -1,4 +1,4 @@
-ul {
+.surveyList {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
